- TruePNG 0.6.0.0 - http://x128.ho.ua/pngutils.html
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XXXXXX - YYYYYYYY
- Prevent missing BTHPROPS.CPL and BLUETOOTHAPIS.DLL error on Wine by making them delay loaded on Win32 binaries to overcome C++ Builder XE7 bug (trlkly).


7.90 - 2015/08/20
- Tested to be compatible on new Microsoft Windows 10.
- Better PNG optimizations by allowing tunning TruePNG parameters, including remove metadata and lossy recompression.
- Better JPEG optimizations by allowing to run jhead when metadata should be copied too (Jaff).
- Do not convert SVG to SVGZ (JoeW).
- Updated Leanify to 0.4.2.64 daily binaries.
- Updated ImageMagick to 6.9.2.0 with HDRI support.
- Updated gifsicle to 1.88 (custom build).
- Updated TruePNG to 0.6.0.0.
- Updated strip to 2.25.1.
- Updated to NSIS 3.0 beta 2.
- Updated custom builds with Visual C++ 2015 (gifsicle, jpegoptim, jsmin).
- Upgraded distributions to 7-Zip 15.06.

7.80 - 2015/06/01
- Fixed an incompatibility with Windows XP introduced in 7.50 by unsupported COPY_FILE_NO_BUFFERING flag that makes CopyFileEx API function fail (Vivil).
- Fixed lossy PNG optimization was performed even if "allow lossy" was unchecked (guindos98, alex, Newtomic).
- Tested over mapped and unmapped network shares.
- Keep rotation on EXIF rotated JPEG images, even if metadata is stripped (Jaff).
- Updated ImageMagick to 6.9.14.
- Updated tidy-html5 to 4.9.26-26-g9785399 patched to be Windows XP compatible.
- Updated Leanify to 0.4.2.45 daily binaries.
- Updated mozjpeg to 3.10.
- Updated jpegoptim to 1.4.3 (custom built).
- Upgraded distributions to 7-Zip 15.03.

7.70 - 2015/05/17
- Added a new PNG option to optionalally allow lossy PNG recompression support with pngquant 2.4.0 (Jack Cherng).